Fix: rendering bugs with safari and negative z-index

--- a/app/assets/stylesheets/_alerts.scss
+++ b/app/assets/stylesheets/_alerts.scss
@@ -1,7 +1,9 @@
 .alert {
   color: red;
+  z-index: 3;
 }
 
 .notice {
   color: green;
+  z-index: 3;
 }
