--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -3,6 +3,8 @@ button, .btn, input {
   background: none;
   border: none;
   color: #fff;
+  z-index: 3;
+  position: relative;
 
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
