--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -2,6 +2,8 @@
   width: 40%;
   text-align: left;
   margin: 0 auto;
+  z-index: 3;
+  position: relative;
 
   @media only screen and (max-width: 750px) {
     width: 75%;
@@ -72,4 +74,9 @@ textarea {
 
 #zalgo_txt {
   display: none;
+}
+
+#new-question-form {
+  position: relative;
+  z-index: 3;
 }
