--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,7 +1,7 @@
 header {
   position: absolute;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   background: transparent;
   width: 100%;
   
